Fixed EventManagementAPI proj
